@@ -1,3 +1,9 @@
+2016-07-11  Tadashi MATSUO  <tad@mymail.twin.jp>
+
+	* twittering-mode.el: Render retweets posted by yourself.
+	(twittering-render-timeline): render a retweet if it is posted by
+	the current account.
+
 2016-07-10  Tadashi MATSUO  <tad@mymail.twin.jp>
 
 	* update-cert.sh: Update the URL of the CA certificates.
